deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: th3
spec:
  selector:
    matchLabels:
      app: th3
  replicas: 3
  template:
    metadata:
      labels:
        app: th3
    spec:
      containers:
        - name: th3
          image: craigmdupree/th3:0.0.1
          livenessProbe:
            failureThreshold: 10
            httpGet:
              # really would have a specific endpoint for this that would accurately tell us the container status
              path: /version
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 60
            successThreshold: 1
            timeoutSeconds: 30
          ports:
            - containerPort: 8000
