blue-th3.yaml
apiVersion: v1
kind: Service
metadata:
  name: th3-blue
  labels:
    app: th3
    color: blue
spec:
  ports:
  - targetPort: 8080
    port: 80
    protocol: TCP
    name: http
  selector:
    app: th3
    color: blue
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: th3-blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: th3
      color: blue
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: th3
        color: blue
    spec:
      containers:
      - image: craigmdupree/th3:0.0.1
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /version
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 30
        name: th3
        ports:
        - containerPort: 8000
