service.yaml
apiVersion: v1
kind: Service
metadata:
  name: th3
  labels:
    app: th3
spec:
  ports:
  - targetPort: 8080
    port: 80
    protocol: TCP
    name: http
  selector:
    app: th3
