ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: th3-ingress
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
      grpc_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
spec:
  ingressClassName: nginx
  rules:
    - host: th3.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: th3-blue
                port:
                  number: 80
